--- a/index.html
+++ b/index.html
@@ -6,70 +6,105 @@
     <title>فرم رزرو</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        /* استایل‌ها بدون تغییر باقی می‌مانند */
         body { font-family: sans-serif; padding: 20px; color: var(--tg-theme-text-color); background: var(--tg-theme-bg-color); }
         input, select { width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px; box-sizing: border-box; }
-        button { width: 100%; padding: 15px; background-color: var(--tg-theme-button-color); color: var(--tg-theme-button-text-color); border: none; border-radius: 5px; cursor: pointer; margin-top: 10px; }
-        #confirmation-view { text-align: center; }
-        #confirmation-view h3 { color: #4CAF50; }
+        button { width: 100%; padding: 15px; background-color: var(--tg-theme-button-color); color: var(--tg-theme-button-text-color); border: none; border-radius: 5px; cursor: pointer; }
+        .time-slot { display: inline-block; margin: 5px; padding: 10px; border: 1px solid #ccc; border-radius: 5px; cursor: pointer; }
+        .time-slot.selected { background-color: var(--tg-theme-button-color); color: var(--tg-theme-button-text-color); }
+        .time-slot.disabled { background-color: #f0f0f0; color: #aaa; cursor: not-allowed; }
     </style>
 </head>
 <body>
+    <h3>فرم ثبت رزرو</h3>
+    <form id="booking-form">
+        <label for="name">نام کامل:</label>
+        <input type="text" id="name" name="name" required>
 
-    <div id="form-view">
-        <h3>فرم ثبت رزرو</h3>
-        <form id="booking-form">
-            <label for="name">نام کامل:</label>
-            <input type="text" id="name" name="name" required>
+        <label for="phone">شماره تماس:</label>
+        <input type="tel" id="phone" name="phone" required>
 
-            <label for="phone">شماره تماس:</label>
-            <input type="tel" id="phone" name="phone" required>
+        <label for="service">خدمت مورد نظر:</label>
+        <input type="text" id="service" name="service" required>
+        <hr>
 
-            <label for="service">خدمت مورد نظر:</label>
-            <input type="text" id="service" name="service" required>
-        </form>
-        <button id="submit-btn">آماده‌سازی پیام برای ارسال</button>
-    </div>
+        <label for="booking-date">تاریخ را انتخاب کنید:</label>
+        <input type="date" id="booking-date" required>
 
-    <div id="confirmation-view" style="display: none;">
-        <h3>✅ پیام شما آماده شد!</h3>
-        <p>لطفاً به صفحه‌ی چت برگشته و دکمه ارسال را بزنید.</p>
-    </div>
+        <label>ساعت را انتخاب کنید:</label>
+        <div id="time-slots-container">ابتدا یک تاریخ انتخاب کنید...</div>
+        <input type="hidden" id="selected-time" name="selected-time">
+    </form>
+    <button id="submit-btn">آماده‌سازی پیام رزرو</button>
 
     <script>
         const tg = window.Telegram.WebApp;
         tg.ready();
 
+        const bookingDateInput = document.getElementById('booking-date');
+        const timeSlotsContainer = document.getElementById('time-slots-container');
+        const selectedTimeInput = document.getElementById('selected-time');
         const submitBtn = document.getElementById('submit-btn');
-        const formView = document.getElementById('form-view');
-        const confirmationView = document.getElementById('confirmation-view');
         
-        // وقتی کاربر دکمه ارسال را می‌زند
+        // ## اینجا آدرس وبهوک ورک‌فلوی API خود را قرار دهید ##
+        const N8N_API_URL = 'https://n8n.turquoise-stone.com/webhook-test/a5320a44-8588-4041-bb95-0bc39dd2569e'; 
+
+        const ALL_AVAILABLE_TIMES = ["09:00", "10:00", "11:00", "12:00", "14:00", "15:00", "16:00"];
+
+        // وقتی کاربر تاریخی را انتخاب می‌کند (این بخش بدون تغییر است)
+        bookingDateInput.addEventListener('change', async function() {
+            const selectedDate = this.value;
+            if (!selectedDate) return;
+            timeSlotsContainer.innerHTML = 'در حال بررسی تایم‌های موجود...';
+            try {
+                const response = await fetch(`${N8N_API_URL}?date=${selectedDate}`);
+                const data = await response.json();
+                const bookedTimes = data.booked_times || [];
+                timeSlotsContainer.innerHTML = '';
+                ALL_AVAILABLE_TIMES.forEach(time => {
+                    const isBooked = bookedTimes.includes(time);
+                    const slotDiv = document.createElement('div');
+                    slotDiv.className = 'time-slot';
+                    slotDiv.textContent = time;
+                    if (isBooked) {
+                        slotDiv.classList.add('disabled');
+                    } else {
+                        slotDiv.addEventListener('click', function() {
+                            document.querySelectorAll('.time-slot').forEach(s => s.classList.remove('selected'));
+                            this.classList.add('selected');
+                            selectedTimeInput.value = time;
+                        });
+                    }
+                    timeSlotsContainer.appendChild(slotDiv);
+                });
+            } catch (error) {
+                timeSlotsContainer.innerHTML = 'خطا در دریافت اطلاعات. لطفا دوباره تلاش کنید.';
+                console.error('Error fetching times:', error);
+            }
+        });
+
+        // ### بخش کلیدی و تغییر یافته ###
+        // وقتی کاربر دکمه ارسال نهایی را می‌زند
         submitBtn.addEventListener('click', function() {
-            // ۱. خواندن اطلاعات از فیلدها
             let name = document.getElementById('name').value;
             let phone = document.getElementById('phone').value;
             let service = document.getElementById('service').value;
+            let date = bookingDateInput.value;
+            let time = selectedTimeInput.value;
 
-            // ۲. اعتبارسنجی
-            if (!name || !phone || !service) {
-                tg.showAlert('لطفا تمام فیلدها را پر کنید.');
+            if (!name || !phone || !service || !date || !time) {
+                tg.showAlert('لطفا تمام فیلدها را به درستی پر کنید.');
                 return;
             }
 
-            // ۳. **بخش کلیدی جدید: ساخت پیام متنی**
-            // ما یک پیام چند خطی با یک کلیدواژه مشخص در ابتدا می‌سازیم
+            // ساخت پیام متنی کامل با تمام جزئیات
             const messageText = `رزرو جدید:
 نام: ${name}
 شماره تماس: ${phone}
-خدمت: ${service}`;
+خدمت: ${service}
+تاریخ: ${date}
+ساعت: ${time}`;
             
-            // ۴. نمایش پیام تایید و بستن فرم
-            formView.style.display = 'none';
-            confirmationView.style.display = 'block';
-
-            // ۵. **مهمترین بخش: جابجایی به چت و قرار دادن پیام در کادر متن**
-            // این تابع متن آماده شده را در کادر متن کاربر قرار می‌دهد.
+            // جابجایی به چت و قرار دادن پیام در کادر متن کاربر
             tg.switchInlineQuery(messageText, []);
         });
     </script>
