--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         const timeSlotsContainer = document.getElementById('time-slots-container');
         const selectedTimeInput = document.getElementById('selected-time');
         const submitBtn = document.getElementById('submit-btn');
-        const N8N_API_URL = 'https://YOUR_N8N_INSTANCE/webhook/YOUR_API_WEBHOOK_ID'; 
+        const N8N_API_URL = 'https://n8n.turquoise-stone.com/webhook/a5320a44-8588-4041-bb95-0bc39dd2569e'; 
         const ALL_AVAILABLE_TIMES = ["09:00", "10:00", "11:00", "12:00", "14:00", "15:00", "16:00"];
         bookingDateInput.addEventListener('change', async function() {
             const selectedDate = this.value;
