--- a/index.html
+++ b/index.html
@@ -8,42 +8,55 @@
     <style>
         body { font-family: sans-serif; padding: 20px; color: var(--tg-theme-text-color); background: var(--tg-theme-bg-color); }
         input, select { width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px; box-sizing: border-box; }
-        button { width: 100%; padding: 15px; background-color: var(--tg-theme-button-color); color: var(--tg-theme-button-text-color); border: none; border-radius: 5px; cursor: pointer; }
+        button { width: 100%; padding: 15px; background-color: var(--tg-theme-button-color); color: var(--tg-theme-button-text-color); border: none; border-radius: 5px; cursor: pointer; margin-top: 10px; }
         .time-slot { display: inline-block; margin: 5px; padding: 10px; border: 1px solid #ccc; border-radius: 5px; cursor: pointer; }
         .time-slot.selected { background-color: var(--tg-theme-button-color); color: var(--tg-theme-button-text-color); }
         .time-slot.disabled { background-color: #f0f0f0; color: #aaa; cursor: not-allowed; }
+        #confirmation-view { text-align: center; }
+        #confirmation-view h3 { color: #4CAF50; }
     </style>
 </head>
 <body>
-    <h3>فرم ثبت رزرو</h3>
-    <form id="booking-form">
-        <label for="name">نام کامل:</label>
-        <input type="text" id="name" name="name" required>
 
-        <label for="phone">شماره تماس:</label>
-        <input type="tel" id="phone" name="phone" required>
+    <div id="form-view">
+        <h3>فرم ثبت رزرو</h3>
+        <form id="booking-form">
+            <label for="name">نام کامل:</label>
+            <input type="text" id="name" name="name" required>
 
-        <label for="service">خدمت مورد نظر:</label>
-        <input type="text" id="service" name="service" required>
-        <hr>
+            <label for="phone">شماره تماس:</label>
+            <input type="tel" id="phone" name="phone" required>
 
-        <label for="booking-date">تاریخ را انتخاب کنید:</label>
-        <input type="date" id="booking-date" required>
+            <label for="service">خدمت مورد نظر:</label>
+            <input type="text" id="service" name="service" required>
+            <hr>
 
-        <label>ساعت را انتخاب کنید:</label>
-        <div id="time-slots-container">ابتدا یک تاریخ انتخاب کنید...</div>
-        <input type="hidden" id="selected-time" name="selected-time">
-    </form>
-    <button id="submit-btn">آماده‌سازی پیام رزرو</button>
+            <label for="booking-date">تاریخ را انتخاب کنید:</label>
+            <input type="date" id="booking-date" required>
+
+            <label>ساعت را انتخاب کنید:</label>
+            <div id="time-slots-container">ابتدا یک تاریخ انتخاب کنید...</div>
+            <input type="hidden" id="selected-time" name="selected-time">
+        </form>
+        <button id="submit-btn">آماده‌سازی پیام برای ارسال</button>
+    </div>
+
+    <div id="confirmation-view" style="display: none;">
+        <h3>✅ پیام شما آماده شد!</h3>
+        <p>لطفاً به صفحه‌ی چت برگشته و دکمه ارسال را بزنید.</p>
+    </div>
 
     <script>
         const tg = window.Telegram.WebApp;
         tg.ready();
 
+        // تعریف تمام متغیرهای مورد نیاز
         const bookingDateInput = document.getElementById('booking-date');
         const timeSlotsContainer = document.getElementById('time-slots-container');
         const selectedTimeInput = document.getElementById('selected-time');
         const submitBtn = document.getElementById('submit-btn');
+        const formView = document.getElementById('form-view');
+        const confirmationView = document.getElementById('confirmation-view');
         
         // ## اینجا آدرس وبهوک ورک‌فلوی API خود را قرار دهید ##
         const N8N_API_URL = 'https://n8n.turquoise-stone.com/webhook/a5320a44-8588-4041-bb95-0bc39dd2569e'; 
@@ -82,21 +95,22 @@
             }
         });
 
-        // ### بخش کلیدی و تغییر یافته ###
         // وقتی کاربر دکمه ارسال نهایی را می‌زند
         submitBtn.addEventListener('click', function() {
+            // ۱. خواندن تمام اطلاعات از فیلدها
             let name = document.getElementById('name').value;
             let phone = document.getElementById('phone').value;
             let service = document.getElementById('service').value;
             let date = bookingDateInput.value;
             let time = selectedTimeInput.value;
 
+            // ۲. اعتبارسنجی کامل
             if (!name || !phone || !service || !date || !time) {
                 tg.showAlert('لطفا تمام فیلدها را به درستی پر کنید.');
                 return;
             }
 
-            // ساخت پیام متنی کامل با تمام جزئیات
+            // ۳. ساخت پیام متنی کامل با تمام جزئیات
             const messageText = `رزرو جدید:
 نام: ${name}
 شماره تماس: ${phone}
@@ -104,7 +118,11 @@
 تاریخ: ${date}
 ساعت: ${time}`;
             
-            // جابجایی به چت و قرار دادن پیام در کادر متن کاربر
+            // ۴. نمایش پیام تایید و مخفی کردن فرم
+            formView.style.display = 'none';
+            confirmationView.style.display = 'block';
+
+            // ۵. جابجایی به چت و قرار دادن پیام در کادر متن کاربر
             tg.switchInlineQuery(messageText, []);
         });
     </script>
