--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <div id="form-view">
-        <h3>فرم ثبت رزرو</h3>
+        <h3>فرم ثبت رزرو آرایشگاه</h3>
         <form id="booking-form">
             <label for="name">نام کامل:</label>
             <input type="text" id="name" name="name" required>
